Fixing extra spacing below entry-titles on posts.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -292,7 +292,6 @@
 
 @media screen and (min-width: 740px) {
 	
-	.singular .entry-title,
 	.singular .entry-meta,
 	.entry-footer-wrap,
 	.hfeed .page-header .page-title {
